<resources>
    <string name="app_name">Sphiggos Mystery</string>
    <string name="settings">Settings</string>
    <string name="pref_difficulty">Difficulty</string>
    <string name="pref_difficulty_default">easy</string>
    <string name="levels">levels</string>
    <string name="play">play</string>
    <string name="level1">level1</string>
    <string name="level2">level2</string>
    <string name="level3">level3</string>
    <string name="level4">level4</string>
    <string name="level5">level5</string>
    <string name="level6">level6</string>
    <string name="level7">level7</string>
    <string name="level8">level8</string>
    <string name="level9">level9</string>
    <string name="level10">level10</string>
    <string name="level">level</string>
    <string name="skip">skip</string>
    <string name="continue_text">Tap to continue&#8230;</string>
    <string name="preference_file_key" translatable="false">hr.faleksic.sphiggosmystery.PREFERENCE_FILE_KEY</string>

    <!-- LEVEL ONE -->
    <string name="al_one_rule_1">Al: Finally you are awake. Here is my task!</string>
    <string name="al_one_rule_2">You are with a wolf, a sheep and some cabbage. You want to transfer all three to the other side.</string>
    <string name="al_one_rule_3">Unfortunately, only you and someone else can fit inside of the boat at the same time. You can transfer one by one but there are some problems.</string>
    <string name="al_one_rule_4">If wolf stays alone on one side with the sheep he will eat it!</string>
    <string name="al_one_rule_5">If sheep stays alone with the cabbage she will eat it!</string>
    <string name="al_one_rule_6">How will you transfer everybody safely to the other side?</string>
    <string name="game_over_wolf_sheep">Sphiggo: You left sheep alone with the wolf! </string>
    <string name="game_over_sheep_cabbage">Sphiggo: You left cabbage alone with the sheep! </string>

    <!-- LEVEL TWO -->
    <string name="level2_hint">Enter passcode</string>
    <string name="matt_one_rule_1">Matt: Welcome to level two! I am surprised that Al\'s puzzle didn\'t kill you.</string>
    <string name="matt_one_rule_2">If you want to beat me, you will need to use your math knowledge. I hope you paid attention in school!</string>
    <string name="matt_one_rule_3">Riddle is written on paper in front of you.</string>
    <string name="matt_one_rule_4">When you think you know the answer write it down and discover how smart you are!</string>
    <string name="level2_answer">229</string>
    <string name="game_over_wrong_passcode">Sphiggo: The passcode is incorrect!</string>

    <!-- LEVEL THREE -->
    <string name="level3_hint">Enter the answer with spaces between words</string>
    <string name="chris_one_rule_1">Chris: Hello, I will give you messages that need to be deciphered!</string>
    <string name="chris_one_rule_2">Do not ask me anything! I am not so kind to give hints like the rest of them!</string>
    <string name="level3_answer">red green blue</string>
    <string name="game_over_wrong_answer">Sphiggo:</string>

    <!-- LEVEL FIVE -->
    <string name="level5_hint">Enter numbers with commas in between</string>
    <string name="matt_two_rule_1">Matt: Hmm, I guess you are smarter than you look like!</string>
    <string name="matt_two_rule_2">Anyway, like before the riddle is written on paper in front of you.</string>
    <string name="matt_two_rule_3">When you think you know the answer write it down and you will die because no one have ever solved this one!</string>
    <string name="level5_answer">1,4,9,16,25,36,49,64,81,100</string>

    <!-- LEVEL SIX -->
    <string name="level6_hint">Answer</string>
    <string name="chris_two_rule">Chris: ...</string>
    <string name="level6_answer">SECRET KEY</string>

    <!-- LEVEL EIGHT -->
    <string name="level8_hint">Enter floor</string>
    <string name="matt_three_rule_1">Matt: HOW ARE YOU STILL ALIVE!</string>
    <string name="matt_three_rule_2">You know how they say, if you want something done you have to do it yourself!</string>
    <string name="matt_three_rule_3">This is my hardest riddle, THIS IS HOW YOU DIE!</string>
    <string name="level8_answer">6</string>

    <!-- LEVEL NINE -->
    <string name="level9_answer">VENI VIDI VICI</string>

    <string name="game_over_text">Your answer is wrong! Now you will suffer!</string>
    <string name="win_text">Sphiggo: Your answer is correct. Go trough that open door to get to the next level!</string>
    <string name="intro">
        Wayne is a detective. He has been trying to catch a famous serial killer called Sphiggo. Sphiggo is obsessed with Sphynx, a mythical creature with the head of human and body of a lion. The legend says that Sphynx gave people riddles and the one that wouldn\'t know the answer would be strangled. Sphiggo is doing the same thing to his victims with the help of his companions and poisonous gas. He puts them in a room with a logic task. If they pass the first one they go to the next one. There are 10 challenges. If they can pass the challenges they can leave, but if not he kills them with gas. No one has beaten the challenge.
One night Wayne was very close to catching Sphiggo but was defeated by his followers and drugged. He woke up in a locked room with Sphiggo follower waiting for him at the table. Wayne immediately realized that he is in one of Sphiggo\'s traps. Sphiggos said that if he beat him he can leave and Sphiggo will give himself to the hand of the law.
Solve Sphiggo\'s Mystery, Good luck!
    </string>
</resources>
