<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/levels_background">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level1"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/level1"
                android:src="@drawable/level_1"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level2"
                android:layout_toEndOf="@id/button_levels_level1"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/level2"
                android:src="@drawable/level_2_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level3"
                android:layout_toEndOf="@id/button_levels_level2"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/level3"
                android:src="@drawable/level_3_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level4"
                android:layout_toEndOf="@id/button_levels_level3"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/level3"
                android:src="@drawable/level_4_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level5"
                android:layout_toEndOf="@id/button_levels_level4"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/play"
                android:src="@drawable/level_5_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level6"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/play"
                android:src="@drawable/level_6_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level7"
                android:layout_toEndOf="@id/button_levels_level6"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/level7"
                android:src="@drawable/level_7_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level8"
                android:layout_toEndOf="@id/button_levels_level7"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/level8"
                android:src="@drawable/level_8_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level9"
                android:layout_toEndOf="@id/button_levels_level8"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/level9"
                android:src="@drawable/level_9_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/button_levels_level10"
                android:layout_toEndOf="@id/button_levels_level9"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/level10"
                android:src="@drawable/level_10_disabled"
                app:layout_heightPercent="60%"
                app:layout_widthPercent="20%"/>
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>

</LinearLayout>
