<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu">

<<<<<<< b8191f5f3b9d282c26e13a72b5384976ffbd5894
<<<<<<< HEAD
=======
<<<<<<< HEAD

=======

<<<<<<< HEAD
=======
>>>>>>> Changed colors and start game activity on play button
=======
>>>>>>> b8191f5f3b9d282c26e13a72b5384976ffbd5894
>>>>>>> 510bfb34b622c82020316e8ef3391fd114b565ce
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="10">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/levels"
            android:src="@drawable/settings_button"/>
        <ImageButton
            android:layout_width="0dp"
            android:id="@+id/button_main_play"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_weight="6"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/play"
            android:src="@drawable/play" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/levels_button"/>
    </LinearLayout>

<<<<<<< HEAD
<<<<<<< b8191f5f3b9d282c26e13a72b5384976ffbd5894
=======
<<<<<<< HEAD
=======
>>>>>>> 510bfb34b622c82020316e8ef3391fd114b565ce

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/play" />
>>>>>>> 3e0734a57da09dd258ea281095f2253b7313002b
<<<<<<< HEAD
=======
>>>>>>> Changed colors and start game activity on play button
=======
>>>>>>> b8191f5f3b9d282c26e13a72b5384976ffbd5894
>>>>>>> 510bfb34b622c82020316e8ef3391fd114b565ce
</RelativeLayout>
